--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
         <meta name="theme-color" content="#7952b3" />
         <title>AdminLte 3 Bootstrap v5.0</title>
 
-        <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/" />
         <!-- <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.min.js"></script> -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
-        />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css" />
+        <link rel="stylesheet" href="public/custom.css" />
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" href="/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180" />
@@ -32,7 +27,7 @@
         <div class="wrapper">
             <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
                 <div class="container">
-                    <a href="#" class="navbar-brand">
+                    <a href="/" class="navbar-brand">
                         <img src="public/logo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: 0.8" />
                         <span class="brand-text font-weight-light">AdminLTE 3</span>
                     </a>
@@ -50,10 +45,10 @@
                     <div class="collapse navbar-collapse order-3" id="navbarCollapse">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="index3.html" class="nav-link">Home</a>
+                                <a href="pdf.html" class="nav-link">PDF</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Contact</a>
+                                <a href="fabricjs.html" class="nav-link">fabricjs</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">Dropdown</a>
@@ -207,24 +202,28 @@
                     </div>
                 </div>
 
-                <div class="container-fluid">
+                <div class="container">
                     <div class="row">
-                        <div class="col-md-12">
-                            <div class="card">
-                                <img src="public/IBM_Security_Portfolio_Client_Presentation-0.png" />
+                        <div class="col-md-12 d-flex">
+                            <div class="content-left">1</div>
+                            <div class="green card m-15">
+                                <div class="card">
+                                    <img src="public/IBM_Security_Portfolio_Client_Presentation-0.png" />
+                                </div>
+                                <div class="card">
+                                    <img src="public/IBM_Security_Portfolio_Client_Presentation-1.png" />
+                                </div>
+                                <div class="card">
+                                    <img src="public/IBM_Security_Portfolio_Client_Presentation-2.png" />
+                                </div>
+                                <div class="card">
+                                    <img src="public/IBM_Security_Portfolio_Client_Presentation-3.png" />
+                                </div>
+                                <div class="card">
+                                    <img src="public/IBM_Security_Portfolio_Client_Presentation-4.png" />
+                                </div>
                             </div>
-                            <div class="card">
-                                <img src="public/IBM_Security_Portfolio_Client_Presentation-1.png" />
-                            </div>
-                            <div class="card">
-                                <img src="public/IBM_Security_Portfolio_Client_Presentation-2.png" />
-                            </div>
-                            <div class="card">
-                                <img src="public/IBM_Security_Portfolio_Client_Presentation-3.png" />
-                            </div>
-                            <div class="card">
-                                <img src="public/IBM_Security_Portfolio_Client_Presentation-4.png" />
-                            </div>
+                            <div class="content-right">3</div>
                         </div>
                     </div>
                 </div>
